# foodiedb

./: README.md  app.py  food_db.py  indian_foods.csv  indian_foods_regional_200.csv  main.py  pyproject.toml  requirements.txt  upload_indian_foods.py
